--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
    background-color: red; 
    font-family: "Verdana", "DejaVu Sans", sans-serif;
 }
+
+#one {
+   color: blue;
+   font-size: medium;
+}
